--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -6,6 +6,6 @@
 #images: ['gcr.io/$PROJECT_ID/custom-script-test']
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/helloworld-image', '.' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/helloworld-image', '-f', 'DOCKERFILE' ]
 images:
 - 'gcr.io/$PROJECT_ID/helloworld-image'
